Bug 146860 - Vertical alignment of text inside grouped shapes textbox incorrect
Summary: Vertical alignment of text inside grouped shapes textbox incorrect
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2022-01-19 16:29 UTC by phv
Modified: 2022-01-31 14:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document (13.22 KB, application/vnd.oasis.opendocument.text)
2022-01-19 16:29 UTC, phv
Details
Comparison Correct display - Incorrect display (81.03 KB, image/png)
2022-01-19 16:34 UTC, phv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description phv 2022-01-19 16:29:03 UTC
Description:
This issue is the same as in bug#146805 but not limited to DOCX format: Textbox inside a group of shapes loses its vertical alignment when imported from Draw.

Steps to Reproduce:
Open the Writer document added as attachment.


Actual Results:
The shapes have textbox with vertical alignement set to middle.

Expected Results:
The shapes should have textbox with vertical alignement set to top.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
According to the report of #146805, it started with the following commit:
https://git.libreoffice.org/core/+/2951cbdf3a6e2b62461665546b47e1d253fcb834
Comment 1 phv 2022-01-19 16:29:58 UTC
Created attachment 177652 [details]
Test document
Comment 2 phv 2022-01-19 16:34:24 UTC
Created attachment 177653 [details]
Comparison Correct display - Incorrect display

I add a comparison between LibreOffice 7.2.2.2 an LibreOfficeDev 7.4.0.0. The documents have the exact same group of shapes.
Comment 3 Buovjaga 2022-01-20 14:25:03 UTC
Bibisected with linux-64-7.4 to
https://git.libreoffice.org/core/commit/c1916d3ab8f764e465f889334050ce7c863576b3

meRememberedAnimationKind is dead

It seemed strange to me at first, so I reverted the commit and did a new build to make sure.

Adding Cc: to Noel Grandin
Comment 4 Commit Notification 2022-01-31 14:07:18 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/36d75660ee5f3d2f9b433935e2c5d689767804fc

tdf#146860 Vertical alignment of text inside grouped shapes textbox incorrect

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.