tdf#146860 Vertical alignment of text inside grouped shapes textbox incorrect

some stupid side effect at work

regression from
    commit c1916d3ab8f764e465f889334050ce7c863576b3
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Wed Dec 8 12:25:58 2021 +0200
    meRememberedAnimationKind is dead

Change-Id: I7ba245a2096ed011f88e08f9d3a87021948e0b01